app/web-nginx-traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: testapp
  name: testapp
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
spec:
  selector:
    app: testapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
