app/web-nginx-traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-testapp
  annotations:
spec:
  rules:
    - host: app.ohkillsh.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp
                port:
                  number: 80
